2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): Improve FAT detection heuristic.
	
2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_for_each): Handle MDB_VOLUME_NUMBER.
	* src/playlist.c (do_refresh): Sort by volume number.

2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (LOCK): Don't take the lock if the thread is the
	current thread is the main thread.
	(UNLOCK): Likewise.

2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (meta_data_reader): More robustly unreference
	MSG.  Always update a track's stats.

2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (meta_data_reader): Spend at most 3 seconds on any
	given song.

2008-12-21  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c: Include <assert.h>.
	(main_thread): New variable.
	(struct sig): New structure.
	(struct _MusicDB): Add fields signal_id, signal_queue and
	signal_lock.
	(signals_flush): New function.
	(signal_schedule): Likewise.
	(music_db_init): Initialize main_thread, db->signal_lock and
	db->signal_queue.
	(music_db_finalize): Free them.
	(music_db_add): Don't call g_signal_emit, instead use
	signal_schedule.
	(music_db_set_info_internal): Likewise.
	(worker_thread): Likewise.

	(status_kick): Call LOCK() before calling g_timeout_add using and
	UNLOCK() afterwards.

2008-12-20  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): Avoid scanning files multiple
	times.

2008-12-20  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h: Include <stdint.h>.
	(MDB_SIZE): Define.
	(struct music_db_info): Add field size.
	* src/musicdb.c (struct info_cache_entry): Add field size.
	(music_db_create_table): Create columns uid, md5 and size.
	(music_db_get_info_internal): Set INFO->SIZE if appropriate.
	(meta_data_reader): Save the track's size.

2008-12-19  Neal H. Walfield  <neal@gnu.org>

	* src/player.c (struct _Player): New fields volume, sink and
	bus_watch.